<resources>
    <string name="app_name">Esprit Fitness</string>
    <string name="send_otp">send_opt</string>
    <string name="resend_otp_formatted">resend_opt_formatted</string>
    <string name="resend_otp">resend_otp</string>
    <string name="channel_name">test name</string>
    <string name="channel_description">test desc</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_accountt">don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="start_training">Start Training</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="start_your_journey_now">Start your journey now!</string>
    <string name="no_pain_no_gain">No Pain No Gain!</string>
    <string name="welcome_user">Welcome User</string>
    <string name="home">home</string>
    <string name="email">Email</string>
    <string name="sign_in">sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="make_a_new_account">Make a new account</string>
    <string name="confirm_password">Confirm password</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="feb_2021">Feb 2021</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="sun">SUN</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="thur">THUR</string>
    <string name="weekly">Weekly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>