<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvWelcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/sign_in_to_continue"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="260dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/text_view"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="260dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="48dp"
            android:background="@drawable/text_view"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="#808080"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="170dp"
            android:layout_height="36dp"
            android:layout_marginBottom="20dp"
            android:padding="1dp"
            android:background="@drawable/gradient_background_button2"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="170dp"
            android:layout_height="36dp"
            android:layout_marginBottom="20dp"
            android:padding="1dp"
            android:background="@drawable/gradient_background_button2"
            android:fontFamily="@font/montserrat_black"
            android:text="Register"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>